--- a/angular.json
+++ b/angular.json
@@ -3,11 +3,11 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "frata": {
+    "terminal": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
-      "prefix": "frata",
+      "prefix": "terminal",
       "schematics": {
         "@schematics/angular:component": {
           "styleext": "scss"
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist",
+            "outputPath": "dist/terminal",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -54,18 +54,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "frata:build"
+            "browserTarget": "terminal:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "frata:build:production"
+              "browserTarget": "terminal:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "frata:build"
+            "browserTarget": "terminal:build"
           }
         },
         "test": {
@@ -99,7 +99,7 @@
         }
       }
     },
-    "frata-e2e": {
+    "terminal-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "architect": {
@@ -107,11 +107,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "frata:serve"
+            "devServerTarget": "terminal:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "frata:serve:production"
+              "devServerTarget": "terminal:serve:production"
             }
           }
         },
@@ -127,5 +127,5 @@
       }
     }
   },
-  "defaultProject": "frata"
+  "defaultProject": "terminal"
 }
