--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
     "core-js": "^2.5.4",
-    "lodash": "^4.17.10",
+    "lodash": "^4.17.11",
+    "npm": "^6.4.1",
     "rxjs": "^6.0.0",
     "zone.js": "~0.8.26"
   },
